--- a/TCS3200.ioc
+++ b/TCS3200.ioc
@@ -7,18 +7,23 @@ Mcu.IP1=RCC
 Mcu.IP2=SYS
 Mcu.IP3=TIM2
 Mcu.IP4=TIM3
-Mcu.IPNb=5
+Mcu.IP5=USART2
+Mcu.IPNb=6
 Mcu.Name=STM32F407V(E-G)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PA1
-Mcu.Pin1=PA6
-Mcu.Pin2=PD12
-Mcu.Pin3=PD13
-Mcu.Pin4=PD14
-Mcu.Pin5=PD15
-Mcu.Pin6=PE0
-Mcu.Pin7=VP_SYS_VS_Systick
-Mcu.PinsNb=8
+Mcu.Pin1=PA2
+Mcu.Pin10=PE0
+Mcu.Pin11=VP_SYS_VS_Systick
+Mcu.Pin2=PA3
+Mcu.Pin3=PA7
+Mcu.Pin4=PD10
+Mcu.Pin5=PD11
+Mcu.Pin6=PD12
+Mcu.Pin7=PD13
+Mcu.Pin8=PD14
+Mcu.Pin9=PD15
+Mcu.PinsNb=12
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407VGTx
@@ -35,9 +40,14 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_0
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+NVIC.TIM3_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 PA1.Signal=S_TIM2_CH2
-PA6.Signal=S_TIM3_CH1
+PA2.Mode=Asynchronous
+PA2.Signal=USART2_TX
+PA3.Mode=Asynchronous
+PA3.Signal=USART2_RX
+PA7.Signal=S_TIM3_CH2
 PCC.Checker=false
 PCC.Line=STM32F407/417
 PCC.MCU=STM32F407V(E-G)Tx
@@ -46,6 +56,14 @@ PCC.Seq0=0
 PCC.Series=STM32F4
 PCC.Temperature=25
 PCC.Vdd=3.3
+PD10.GPIOParameters=GPIO_Label
+PD10.GPIO_Label=S2
+PD10.Locked=true
+PD10.Signal=GPIO_Output
+PD11.GPIOParameters=GPIO_Label
+PD11.GPIO_Label=S3
+PD11.Locked=true
+PD11.Signal=GPIO_Output
 PD12.GPIOParameters=GPIO_Label
 PD12.GPIO_Label=GreenLed
 PD12.Locked=true
@@ -94,7 +112,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=MDK-ARM V5.27
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_TIM2_Init-TIM2-false-HAL-true,4-MX_TIM3_Init-TIM3-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_TIM2_Init-TIM2-false-HAL-true,4-MX_TIM3_Init-TIM3-false-HAL-true,5-MX_USART2_UART_Init-USART2-false-HAL-true
 RCC.48MHZClocksFreq_Value=20571428.57142857
 RCC.AHBFreq_Value=72000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
@@ -129,16 +147,18 @@ RCC.VCOOutputFreq_Value=144000000
 RCC.VcooutputI2S=192000000
 SH.S_TIM2_CH2.0=TIM2_CH2,Input_Capture2_from_TI2
 SH.S_TIM2_CH2.ConfNb=1
-SH.S_TIM3_CH1.0=TIM3_CH1,PWM Generation1 CH1
-SH.S_TIM3_CH1.ConfNb=1
+SH.S_TIM3_CH2.0=TIM3_CH2,PWM Generation2 CH2
+SH.S_TIM3_CH2.ConfNb=1
 TIM2.Channel-Input_Capture2_from_TI2=TIM_CHANNEL_2
 TIM2.IPParameters=Channel-Input_Capture2_from_TI2,Prescaler,Period
 TIM2.Period=0xFFFF-1
 TIM2.Prescaler=72-1
-TIM3.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
-TIM3.IPParameters=Channel-PWM Generation1 CH1,Prescaler,Period
-TIM3.Period=1000-1
-TIM3.Prescaler=1440-1
+TIM3.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
+TIM3.IPParameters=Channel-PWM Generation2 CH2,Prescaler,Period
+TIM3.Period=0xFFFF-1
+TIM3.Prescaler=72-1
+USART2.IPParameters=VirtualMode
+USART2.VirtualMode=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 board=STM32F407G-DISC1
